# writ

./: .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml  README.md
cli/src/: config.rs  main.rs
cli/src/commands/: delegate.rs  mint.rs  mod.rs  revoke.rs  status.rs
docs/: delegation-scopes.md  integration-guide.md
examples/: README.md  verify-agent.ts
idl/: delegation.json  hand_gate.json
programs/delegation/src/: lib.rs
programs/delegation/src/instructions/: delegate.rs  revoke_delegation.rs
programs/hand-gate/: Cargo.toml  README.md
programs/hand-gate/src/: error.rs  lib.rs  verify.rs
programs/hand-gate/src/instructions/: verify_with_reputation.rs
programs/hand-registry/src/: lib.rs
programs/hand-registry/src/instructions/: initialize_hand.rs  mod.rs
programs/reputation/src/state/: mod.rs  reporter.rs
programs/writ-gate/: README.md
sdk/: README.md  package-lock.json  package.json
sdk/src/: constants.ts  errors.ts  pda.ts  types.ts
sdk/src/__tests__/: serialization.test.ts
tests/: delegation.ts  reputation.ts
